# cvi_pinmux

./: .gitignore  CMakeLists.txt  README.md
include/: pinmux.h  port.h
src/: main.c  pinmux.c  port.c
